2007-10-05  Chris Morley

	* include/openbabel/forcefield.h: correct back to OBFPRT
	and add default definaition as nothing.

	* include/openbabel/groupcontrib.h: add back to OBDESC
	and add default definition as nothing.
	
	* src/forcefields/forcefieldmmff94.cpp: add initial value for 
	energy and comment out several unused variables to reduce compiler
	messages.
	
	* src/formats/getinchi.cpp: Now reads unquoted InChIs split with
	XML elements like <br />
	
	* src/formats/inchiformat.cpp: Make InChIKey output replace 
	normal InChI rather than adding to it. Still Windows only until
	1.02beta InChI source files added.
	
	* src/formats/smilesformat.cpp(ParseRingBond): ensured that atoms
	are added to OBChiralData::Atom4Refs in the order of the ring closure
	digits on the chiral atom rather than the atom index order. Partial
	fix for bug #1805910
	Added SetChiralityPerceived after reading. Avoids doing it again 
	in FindChiralCenters() which seems not to work sometimes, e.g. for
	CN1CCC[C@H]1c2cccnc2 and CP(O)(=O)C[C@H](O)CN

2007-10-03  Jean Brefort  <jean.brefort@normalesup.org>

	* include/openbabel/groupcontrib.h: removed undefined OBDESC.
	* include/openbabel/op.h: removed OBOp:: from inside class
	definition.

2007-10-03  Jean Brefort  <jean.brefort@normalesup.org>

	* include/openbabel/forcefield.h: fixed typos.

2007-09-26  Chris Morley

	* src/formats/inchiformat.cpp: forgot to change InChIKey option
	in code  to -xK.
	
	* include/zconf.h: replaced. Needed for Windows builds.

	Added Windows build files for obf (multiple DLL) build

	* windows-vc2005/babelconfig.h: replace USE_OBF by USING_DYNAMIC_LIBS

2007-09-25  Chris Morley

	Added files:
	include/openbabel/op.h: new OBOp class, plugin options
	src/ops.cpp: trivial OBOp class for centering
	src/op2d.cpp: class to add 2D coordinates using RDKit
	src/RDKitConv.cpp: conversion OBMol to RWMol
	
	* include/openbabel/descriptor.h: changeprefix macro from OBERROR
	to OBAPI.
	